--- a/backend/bin/pom.xml
+++ b/backend/bin/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.2.6.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.carservice</groupId>
+	<groupId>com.carmanagement</groupId>
 	<artifactId>backend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>backend</name>
-	<description>The Car Service Backend Project</description>
+	<description>The Car Management Backend Project</description>
 
 	<properties>
 		<java.version>11</java.version>
