docker-compose yml file was created

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -4,10 +4,10 @@ services:
     image: mongo:bionic
     container_name: "nosql-db"
     ports:
-      - 5100:27017
+      - 27017:27017
   api:
-    image: service-docker-image
+    build: ./ 
     ports:
-      - 9091:8080
+      - 8080:8080
     links:
       - nosql-db
