mongodb connection properties were added

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-spring.data.mongodb.host=nosql-db
+spring.data.mongodb.uri=mongodb://mongodb/cardb
+spring.data.mongodb.database=cardb
+spring.data.mongodb.host=mongodb
+spring.data.mongodb.port=27017
+spring.datasource.driverClassName=MongoDB
