--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,8 +1,10 @@
 HELP.md
 target/
+bin/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**
 !**/src/test/**
+*.attach*
 
 ### STS ###
 .apt_generated
