--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,10 +1,11 @@
 HELP.md
 target/
 bin/
-!.mvn/wrapper/maven-wrapper.jar
+
 !**/src/main/**
 !**/src/test/**
 *.attach*
+.mvn/
 
 ### STS ###
 .apt_generated
