--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.data.mongodb.database=cardb
 spring.data.mongodb.host=mongodb
 spring.data.mongodb.port=27017
 spring.datasource.driverClassName=MongoDB
+
+car.errors.restcontrolleradvice=true
