--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,1 @@
-spring.data.mongodb.uri=mongodb://mongodb/cardb
-spring.data.mongodb.database=cardb
-spring.data.mongodb.host=mongodb
-spring.data.mongodb.port=27017
-spring.datasource.driverClassName=MongoDB
-
-car.errors.restcontrolleradvice=true
+spring.profiles.active=dev
