--- a/.github/workflows/github-CI.yml
+++ b/.github/workflows/github-CI.yml
@@ -21,4 +21,6 @@ jobs:
       with:
         java-version: 11
     - name: Build with Maven
-      run: mvn package -Dmaven.test.skip=true --file backend/pom.xml
+      run: 
+        - cd backend
+        - mvn package -Dmaven.test.skip=true --file pom.xml
