--- a/.github/workflows/github-CI.yml
+++ b/.github/workflows/github-CI.yml
@@ -22,5 +22,5 @@ jobs:
         java-version: 11
     - name: Build with Maven
       run: 
-        - cd backend
+        cd backend
         - mvn package -Dmaven.test.skip=true --file pom.xml
