--- a/.github/workflows/github-CI.yml
+++ b/.github/workflows/github-CI.yml
@@ -20,6 +20,5 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 11
-      - name: Build with Maven
-      run:
-        - mvn package -Dmaven.test.skip=true --file backend/pom.xml
+    - name: Build with Maven
+      run: mvn package -Dmaven.test.skip=true --file backend/pom.xml
