--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,14 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.1",
     "classnames": "^2.2.5",
+    "formik": "^2.1.4",
     "material-ui-banner": "^1.4.3",
     "node-sass": "^4.14.0",
     "primeicons": "^2.0.0",
     "primereact": "^4.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
