[FIXUP] mongodb connection problem was resolved

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-spring.profiles.active=dev
+spring.data.mongodb.database=cardb
+spring.data.mongodb.host=mongodb
+spring.data.mongodb.port=27017
+
+car.errors.restcontrolleradvice=true
